Redid goalie stats, updated data coalescers

--- a/datacoalescers/goalie.ipynb
+++ b/datacoalescers/goalie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,25 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data\n",
-    "\n",
-    "shots = pd.read_csv('./shots/2024_shots_g.csv', encoding='latin-1')"
+    "season = 2018\n",
+    "season_string = 20172018\n",
+    "shots = pd.read_csv('./shots/2018_shots_g.csv', encoding='latin-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 57413/57413 [00:02<00:00, 23558.18it/s]\n"
+      "100%|██████████| 74919/74919 [00:02<00:00, 28723.84it/s]\n"
      ]
     }
    ],
@@ -51,20 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 92/92 [00:19<00:00,  4.82it/s]\n"
+      "100%|██████████| 93/93 [00:36<00:00,  2.52it/s]\n"
      ]
     }
    ],
    "source": [
     "# Update Dictionaries with other statistics for goalies\n",
-    "shootout = requests.get(\"https://api.nhle.com/stats/rest/en/goalie/shootout?isAggregate=false&isGame=false&sort=%5B%7B%22property%22:%22shootoutWins%22,%22direction%22:%22DESC%22%7D,%7B%22property%22:%22shootoutSavePct%22,%22direction%22:%22DESC%22%7D,%7B%22property%22:%22playerId%22,%22direction%22:%22ASC%22%7D%5D&start=0&limit=500&factCayenneExp=gamesPlayed%3E=1&cayenneExp=gameTypeId=2%20and%20seasonId%3C=20232024%20and%20seasonId%3E=20232024\").json();\n",
+    "shootout = requests.get(f\"https://api.nhle.com/stats/rest/en/goalie/shootout?isAggregate=false&isGame=false&sort=%5B%7B%22property%22:%22shootoutWins%22,%22direction%22:%22DESC%22%7D,%7B%22property%22:%22shootoutSavePct%22,%22direction%22:%22DESC%22%7D,%7B%22property%22:%22playerId%22,%22direction%22:%22ASC%22%7D%5D&start=0&limit=500&factCayenneExp=gamesPlayed%3E=1&cayenneExp=gameTypeId=2%20and%20seasonId%3C={season_string}%20and%20seasonId%3E={season_string}\").json();\n",
     "for player_id, stats in tqdm(goalies.items()):\n",
     "    player = requests.get(f'https://api-web.nhle.com/v1/player/{player_id}/landing').json()\n",
     "    stats['position'] = 'G'\n",
@@ -77,19 +78,21 @@
     "    stats['position'] = player['position']\n",
     "    stats['height'] = player['heightInInches']\n",
     "    stats['weight'] = player['weightInPounds']\n",
-    "    stats['team'] = player[\"fullTeamName\"][\"default\"]\n",
+    "    stats['team'] = list(filter(lambda x: x['leagueAbbrev'] == 'NHL' and x[\"season\"] == season_string, player['seasonTotals']))[-1]['teamName'][\"default\"]\n",
     "    stats['handedness'] = player['shootsCatches']\n",
     "\n",
     "    # TOI\n",
-    "    nhl_seasons = list(filter(lambda x: x['leagueAbbrev'] == 'NHL' and x[\"season\"] == 20232024, player['seasonTotals']))\n",
+    "    nhl_seasons = list(filter(lambda x: x['leagueAbbrev'] == 'NHL' and x[\"season\"] == season_string and x['gameTypeId'] == 2, player['seasonTotals']))\n",
     "    total_toi =0 \n",
+    "    starts = 0\n",
     "    for nhl_seas in nhl_seasons:\n",
     "        seas = nhl_seas[\"timeOnIce\"]\n",
+    "        starts += nhl_seas['gamesStarted']\n",
     "        m, s = map(int, seas.split(':'))\n",
     "        total_toi += m + s/60\n",
     "\n",
     "    stats['TOI'] = total_toi\n",
-    "    stats['starts'] = nhl_seasons[-1][\"gamesStarted\"]\n",
+    "    stats['starts'] = starts\n",
     "\n",
     "    shootout_stats = list(filter(lambda x: int(x[\"playerId\"]) == int(player_id), shootout[\"data\"]))\n",
     "\n",
@@ -103,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 92/92 [00:30<00:00,  3.01it/s]\n"
+      "100%|██████████| 93/93 [00:35<00:00,  2.64it/s]\n"
      ]
     }
    ],
@@ -124,7 +127,7 @@
     "    xG = shots[(shots['goalie_id'].astype(str).str[:7] == player_id) & (shots['xGF'] < 0.05)]['xGF'].sum()\n",
     "    goals = shots[(shots['goalie_id'].astype(str).str[:7] == player_id) & (shots['xGF'] < 0.05)]['isGoal'].sum()\n",
     "\n",
-    "    stats['low_danger'] = (xG - goals) /stats['TOI']\n",
+    "    stats['low_danger'] = (xG - goals)\n",
     "\n",
     "    # Medium Danger Shots\n",
     "    xG = shots[(shots['goalie_id'].astype(str).str[:7] == player_id) & (shots['xGF'] > 0.05) & (shots['xGF'] < 0.15)]['xGF'].sum()\n",
@@ -132,7 +135,7 @@
     "    freq = len(shots[(shots['goalie_id'].astype(str).str[:7] == player_id) & (shots['xGF'] > 0.05) & (shots['xGF'] < 0.15)]['xGF'])\n",
     "\n",
     "\n",
-    "    stats['medium_danger'] = (xG - goals) /stats['TOI']\n",
+    "    stats['medium_danger'] = (xG - goals)\n",
     "    stats['medium_danger_freq'] = (freq / stats['TOI']) * 60 if stats['TOI'] != 0 else 0\n",
     "\n",
     "    # High Danger Shots\n",
@@ -140,7 +143,7 @@
     "    goals = shots[(shots['goalie_id'].astype(str).str[:7] == player_id) & (shots['xGF'] > 0.15)]['isGoal'].sum()\n",
     "    freq = len(shots[(shots['goalie_id'].astype(str).str[:7] == player_id) & (shots['xGF'] > 0.15)]['xGF'])\n",
     "\n",
-    "    stats['high_danger'] = (xG - goals) /stats['TOI']\n",
+    "    stats['high_danger'] = (xG - goals)\n",
     "    stats['high_danger_freq'] = (freq / stats['TOI']) * 60 if stats['TOI'] != 0 else 0\n",
     "    \n",
     "    # PK\n",
@@ -148,27 +151,27 @@
     "    goals = sum(shots[(shots['goalie_id'].astype(str).str[:7] == player_id) & (shots['strength'] == 'PP')]['isGoal'])\n",
     "\n",
     "\n",
-    "    stats['pk'] = (xG - goals) /stats['TOI']\n",
+    "    stats['pk'] = (xG - goals)\n",
     "\n",
     "    # EV\n",
     "    xG = sum(shots[(shots['goalie_id'].astype(str).str[:7] == player_id) & (shots['strength'] == 'EV')]['xGF'])\n",
     "    goals = sum(shots[(shots['goalie_id'].astype(str).str[:7] == player_id) & (shots['strength'] == 'EV')]['isGoal'])\n",
     "\n",
-    "    stats['ev'] = (xG - goals) /stats['TOI']\n",
+    "    stats['ev'] = (xG - goals)\n",
     "\n",
     "goalies[player_id] = stats\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5486/5486 [10:56<00:00,  8.36it/s]\n"
+      "100%|██████████| 7320/7320 [12:25<00:00,  9.82it/s]  \n"
      ]
     }
    ],
@@ -206,7 +209,10 @@
     "        if len(shot_list) != 0:\n",
     "            shot_id = shot_list[0]['statsEventId']\n",
     "            if str(event_id) == shot_id:\n",
-    "                link = f'https://players.brightcove.net/6415718365001/EXtG1xJ7H_default/index.html?videoId={shot_list[0][\"brightcoveId\"]}'\n",
+    "                try:\n",
+    "                    link = f'https://players.brightcove.net/6415718365001/EXtG1xJ7H_default/index.html?videoId={shot_list[0][\"brightcoveId\"]}'\n",
+    "                except:\n",
+    "                    link\n",
     "\n",
     "\n",
     "    shooter = shot['shooter']\n",
@@ -220,35 +226,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn = connect(\"player_stats.db\")\n",
-    "curr = conn.cursor()\n",
-    "\n",
-    "# create a table \n",
-    "curr.execute('CREATE TABLE IF NOT EXISTS goalies_2024 (TOI NUMBER, starts NUMBER, shootout NUMBER, shots TEXT, low_danger NUMBER, medium_danger NUMBER, medium_danger_freq NUMBER, high_danger NUMBER, high_danger_freq NUMBER,  pk NUMBER, ev NUMBER  firstName TEXT, lastName TEXT, birthDate TEXT, nationality TEXT, position TEXT, height TEXT, weight NUMBER, team TEXT, handedness TEXT, player_id TEXT)')\n",
-    " \n",
-    "# commit the query\n",
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "# conn = connect(\"player_stats.db\")\n",
     "# curr = conn.cursor()\n",
+    "\n",
+    "# # create a table \n",
+    "# curr.execute('CREATE TABLE IF NOT EXISTS goalie_numbers (TOI NUMBER, season NUMBER, starts NUMBER, shootout NUMBER, shots TEXT, low_danger NUMBER, medium_danger NUMBER, medium_danger_freq NUMBER, high_danger NUMBER, high_danger_freq NUMBER,  pk NUMBER, ev NUMBER  firstName TEXT, lastName TEXT, birthDate TEXT, nationality TEXT, position TEXT, height TEXT, weight NUMBER, team TEXT, handedness TEXT, player_id TEXT)')\n",
+    " \n",
+    "# # commit the query\n",
+    "# conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conn = connect(\"player_stats.db\")\n",
+    "# curr = conn.cursor()\n",
+    "\n",
+    "# # create a table \n",
+    "# curr.execute('CREATE TABLE IF NOT EXISTS goalie_numbers_no_percentile (TOI NUMBER, season NUMBER, starts NUMBER, shootout NUMBER, shots TEXT, low_danger NUMBER, medium_danger NUMBER, medium_danger_freq NUMBER, high_danger NUMBER, high_danger_freq NUMBER,  pk NUMBER, ev NUMBER, firstName TEXT, lastName TEXT, birthDate TEXT, nationality TEXT, position TEXT, height TEXT, weight NUMBER, team TEXT, handedness TEXT, player_id TEXT)')\n",
+    " \n",
+    "# # commit the query\n",
+    "# conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = connect(\"player_stats.db\")\n",
+    "curr = conn.cursor()\n",
     "# conn.execute(\"VACUUM\")\n",
     "# conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,12 +283,13 @@
     "    players.append(pd.DataFrame.from_dict([stats]))\n",
     "\n",
     "df = pd.concat(players)\n",
+    "df['season'] = [season] * len(df)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +316,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dump to SQL\n",
+    "df.to_sql('goalie_numbers_no_percentile', conn, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -320,45 +364,54 @@
        "74"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Dump to SQL\n",
-    "df.to_sql('goalies_2024', conn, if_exists='replace')"
+    "df.to_sql('goalie_numbers', conn, if_exists='append')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conn = connect(\"player_stats.db\")\n",
+    "# conn.execute(\"DROP TABLE goalies\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conn = connect(\"player_stats.db\")\n",
+    "# conn.execute(\"VACUUM\")\n",
+    "# conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
