Added most recent data

--- a/datacoalescers/goalie.ipynb
+++ b/datacoalescers/goalie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,26 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data\n",
-    "season = 2018\n",
-    "season_string = 20172018\n",
-    "shots = pd.read_csv('./shots/2018_shots_g.csv', encoding='latin-1')"
+    "season = 2025\n",
+    "season_string = 20242025\n",
+    "shots = pd.read_csv('./shots/2025_shots_g.csv', encoding='latin-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 74919/74919 [00:02<00:00, 28723.84it/s]\n"
+      "  0%|          | 0/9224 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9224/9224 [00:00<00:00, 20927.88it/s]\n"
      ]
     }
    ],
@@ -52,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 93/93 [00:36<00:00,  2.52it/s]\n"
+      "100%|██████████| 71/71 [00:16<00:00,  4.40it/s]\n"
      ]
     }
    ],
@@ -106,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 93/93 [00:35<00:00,  2.64it/s]\n"
+      "100%|██████████| 71/71 [00:04<00:00, 17.54it/s]\n"
      ]
     }
    ],
@@ -164,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7320/7320 [12:25<00:00,  9.82it/s]  \n"
+      "100%|██████████| 946/946 [00:00<?, ?it/s]\n"
      ]
     }
    ],
@@ -179,54 +186,54 @@
     "# Get Shots Per Player\n",
     "shots_goals = shots[shots['isGoal'] == 1]\n",
     "for i in tqdm(range(0, len(shots_goals))):\n",
-    "    shot = shots_goals.iloc[i]\n",
-    "    if str(shot['event']) != 'goal' or str(shot['goalie_id']) == 'nan':\n",
-    "        continue\n",
-    "    stats = goalies[str(int(shot['goalie_id']))[:7]]\n",
-    "    goalie_id = str(int(shot['goalie_id']))[:7]\n",
+    "#     shot = shots_goals.iloc[i]\n",
+    "#     if str(shot['event']) != 'goal' or str(shot['goalie_id']) == 'nan':\n",
+    "#         continue\n",
+    "#     stats = goalies[str(int(shot['goalie_id']))[:7]]\n",
+    "#     goalie_id = str(int(shot['goalie_id']))[:7]\n",
     "\n",
-    "    player_shots = stats.get('shots', [])\n",
+    "#     player_shots = stats.get('shots', [])\n",
     "\n",
-    "    event_id = str(shot['shot_id'])\n",
-    "    game = shot['gameID']\n",
-    "    link = ['No link found.']\n",
+    "#     event_id = str(shot['shot_id'])\n",
+    "#     game = shot['gameID']\n",
+    "#     link = ['No link found.']\n",
     "\n",
-    "    # Grab media (shoutout trusty)\n",
-    "    if event_id != 'nan':\n",
-    "        failed = True\n",
-    "        while failed:\n",
-    "            try:\n",
-    "                media = requests.get(f'https://forge-dapi.d3.nhle.com/v2/content/en-US/videos?context.slug=nhl&tags.slug=highlight&tags.slug=gameid-{game}').json()\n",
-    "                failed = False\n",
-    "            except (requests.exceptions.RequestException,\n",
-    "                ConnectionResetError) as err:\n",
-    "                tm.sleep(20)\n",
-    "                print('Taking a break...')\n",
-    "        highlights =  media[\"items\"]\n",
-    "        shot_list = list(filter(lambda x: \"fields\" in x.keys(), highlights))\n",
-    "        shot_list = list(map(lambda x: x[\"fields\"], shot_list))\n",
-    "        shot_list = list(filter(lambda x: \"statsEventId\" in x.keys() and x[\"statsEventId\"] == event_id, shot_list))\n",
-    "        if len(shot_list) != 0:\n",
-    "            shot_id = shot_list[0]['statsEventId']\n",
-    "            if str(event_id) == shot_id:\n",
-    "                try:\n",
-    "                    link = f'https://players.brightcove.net/6415718365001/EXtG1xJ7H_default/index.html?videoId={shot_list[0][\"brightcoveId\"]}'\n",
-    "                except:\n",
-    "                    link\n",
-    "\n",
-    "\n",
-    "    shooter = shot['shooter']\n",
+    "#     # Grab media (shoutout trusty)\n",
+    "#     if event_id != 'nan':\n",
+    "#         failed = True\n",
+    "#         while failed:\n",
+    "#             try:\n",
+    "#                 media = requests.get(f'https://forge-dapi.d3.nhle.com/v2/content/en-US/videos?context.slug=nhl&tags.slug=highlight&tags.slug=gameid-{game}').json()\n",
+    "#                 failed = False\n",
+    "#             except (requests.exceptions.RequestException,\n",
+    "#                 ConnectionResetError) as err:\n",
+    "#                 tm.sleep(20)\n",
+    "#                 print('Taking a break...')\n",
+    "#         highlights =  media[\"items\"]\n",
+    "#         shot_list = list(filter(lambda x: \"fields\" in x.keys(), highlights))\n",
+    "#         shot_list = list(map(lambda x: x[\"fields\"], shot_list))\n",
+    "#         shot_list = list(filter(lambda x: \"statsEventId\" in x.keys() and x[\"statsEventId\"] == event_id, shot_list))\n",
+    "#         if len(shot_list) != 0:\n",
+    "#             shot_id = shot_list[0]['statsEventId']\n",
+    "#             if str(event_id) == shot_id:\n",
+    "#                 try:\n",
+    "#                     link = f'https://players.brightcove.net/6415718365001/EXtG1xJ7H_default/index.html?videoId={shot_list[0][\"brightcoveId\"]}'\n",
+    "#                 except:\n",
+    "#                     link\n",
     "\n",
     "\n",
-    "    player_shots.append({'date': shot['date'], 'shooter': shooter, 'goalie': shot['goalie'], 'strength': shot['strength'], 'away_goals': shot['away_goals'], 'home_goals': shot['home_goals'], 'home_team': shot['home'], 'away_team': shot['away'], 'x': shot['x'], 'y': shot['y'], 'prev_event': shot['prev_event'], 'type': shot['shotType'], 'xG': shot['xGF'], 'Outcome': shot['event'], 'Link': link})\n",
+    "#     shooter = shot['shooter']\n",
     "\n",
-    "    stats['shots'] = player_shots\n",
+    "\n",
+    "#     player_shots.append({'date': shot['date'], 'shooter': shooter, 'goalie': shot['goalie'], 'strength': shot['strength'], 'away_goals': shot['away_goals'], 'home_goals': shot['home_goals'], 'home_team': shot['home'], 'away_team': shot['away'], 'x': shot['x'], 'y': shot['y'], 'prev_event': shot['prev_event'], 'type': shot['shotType'], 'xG': shot['xGF'], 'Outcome': shot['event'], 'Link': link})\n",
+    "\n",
+    "    stats['shots'] = []\n",
     "    goalies[goalie_id] = stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,37 +314,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[df['TOI'] >= 300]"
+    "df = df[df['TOI'] >= 30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "74"
+       "69"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Dump to SQL\n",
+    "curr.execute(\"DELETE FROM goalie_numbers_no_percentile WHERE season = 2025\")\n",
     "df.to_sql('goalie_numbers_no_percentile', conn, if_exists='append', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,28 +363,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "74"
+       "69"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Dump to SQL\n",
+    "curr.execute(\"DELETE FROM goalie_numbers WHERE season = 2025\")\n",
     "df.to_sql('goalie_numbers', conn, if_exists='append')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,17 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# conn = connect(\"player_stats.db\")\n",
-    "# conn.execute(\"DROP TABLE goalies\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
